# aws-analytics-scripts

./: README.md  http_request.py  pyproject.toml
kinesis/: boto_producer.py
msk/: admin_9092.py  producer.py
opensearch/: opensearch_index.py
